--- a/InventoryUI/inventory-ui/src/app/app.component.scss
+++ b/InventoryUI/inventory-ui/src/app/app.component.scss
@@ -303,5 +303,5 @@ a {
 }
 .app-header-data{
     display: grid;
-    grid-template-columns: 2fr 0.7fr 0.1fr;
+    grid-template-columns: 2fr 0.7fr;
 }
