--- a/InventoryUI/inventory-ui/src/app/bill-v2/bill-v2.component.html
+++ b/InventoryUI/inventory-ui/src/app/bill-v2/bill-v2.component.html
@@ -132,7 +132,7 @@
           <mat-icon>print</mat-icon> {{'Print' | translate }}
         </button>
           <button translate mat-raised-button class="btn btn-secondary" (click)="sendToWhatsapp()">
-          <mat-icon>Whatsapp</mat-icon> {{'Whatsapp' | translate }}
+          <img src="whatsapp.svg" width="25px" height="25px"/> {{'Whatsapp' | translate }}
         </button>
           <button translate mat-raised-button class="btn btn-secondary" (click)="Close()">
           <mat-icon>close</mat-icon> {{'Close' | translate }}
